Adds Jennifer's avatar

--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -10,7 +10,7 @@
   imageUrl: https://app.joinoneroom.com/img/courses/hand-vintage-old-book.jpg
   description: Writing is as much about process as it is about technique. This course will guide you through a diverse selection of writing prompts, processes, and revision techniques. We’ll look for new ways to ...
   teacherName: Jennifer Duffield White
-  teacherPicUrl: https://raw.githubusercontent.com/joinoneroom/joinoneroom.github.io/0fa1eab111ad792288ad38371e32e4feeb1f7813/img/Liz_Duffy_Adams.jpg
+  teacherPicUrl: https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpa1/v/t1.0-9/735232_10151350870072460_1986717913_n.jpg?oh=5dbbe573a66f6e066a22555986e5ee91&oe=56217DA6
 
 - name: "Radical Rewriting & Reclamation"
   classUrl: https://app.joinoneroom.com/course/radical-rewriting-reclamation/?utm_source=homepage&utm_medium=class-card&utm_campaign=featured%20homepage%20classes
