--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -1,19 +1,19 @@
 - name: "Advanced Fiction Workshop: Description"
-  courseUrl: https://app.joinoneroom.com/course/advanced-fiction-workshop-description/?utm_source=homepage&utm_medium=class-card&utm_campaign=featured%20homepage%20classes
+  courseUrl: https://app.joinoneroom.com/course/advanced-fiction-workshop-description/?utm_medium=post&utm_source=homepage&utm_campaign=2015-09-push
   imageUrl: https://app.joinoneroom.com/img/courses/bird-flying-pelican.jpg
   description: Rope and wrangle the power of description in an Advanced Fiction Workshop with Benjamin Obler. Watch his video intro to the class; we dare you not to be charmed.
   teacherName: Ben Obler
   teacherPicUrl: http://i2.wp.com/www.benobler.com/wp-content/uploads/2015/07/Obler.jpg
 
 - name: "Jumpstarting the Creative Process"
-  courseUrl: https://app.joinoneroom.com/course/jumpstarting-the-creative-process/?utm_source=homepage&utm_medium=class-card&utm_campaign=featured%20homepage%20classes
+  courseUrl: https://app.joinoneroom.com/course/jumpstarting-the-creative-process/?utm_medium=post&utm_source=homepage&utm_campaign=2015-09-push
   imageUrl: https://app.joinoneroom.com/img/courses/hand-vintage-old-book.jpg
   description: Writing is as much about process as it is about technique. This course will guide you through a diverse selection of writing prompts, processes, and revision techniques. We’ll look for new ways to ...
   teacherName: Jennifer Duffield White
   teacherPicUrl: https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpa1/v/t1.0-9/735232_10151350870072460_1986717913_n.jpg?oh=5dbbe573a66f6e066a22555986e5ee91&oe=56217DA6
 
 - name: "Radical Rewriting & Reclamation"
-  courseUrl: https://app.joinoneroom.com/course/radical-rewriting-reclamation/?utm_source=homepage&utm_medium=class-card&utm_campaign=featured%20homepage%20classes
+  courseUrl: https://app.joinoneroom.com/course/radical-rewriting-reclamation/?utm_medium=post&utm_source=homepage&utm_campaign=2015-09-push
   imageUrl: https://app.joinoneroom.com/img/courses/radical-rewriting.jpg
   description: Pull that play out of the drawer and explode, cut, paste, and generally get radical. Reclaim that drafted play with Liz Duffy Adams in her class Radical Rewriting and Reclamation.
   teacherName: Liz Duffy Adams
