Updates featured courses to a total of six

--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -8,6 +8,11 @@
   imageUrl: https://app.joinoneroom.com/img/courses/posture-stats.jpg
   description: Un-slouch and regain mobility you never knew you lost.
 
+- name: "Interviewing for Jobs: No More Mister Nervous Guy"
+  courseUrl: https://app.joinoneroom.com/course/interviewing-for-jobs-no-more-mister-nervous-guy/?utm_medium=featured-class&utm_source=homepage&utm_campaign=5-10-20-push
+  imageUrl: https://static.pexels.com/photos/154/people-apple-iphone-writing-medium.jpg
+  description: Stop dreading job interviews and dazzle those HR-types.
+
 - name: "Mindfulness Meditation for Beginners"
   courseUrl: https://app.joinoneroom.com/course/mindfulness-meditation-for-beginners/?utm_medium=featured-class&utm_source=homepage&utm_campaign=5-10-20-push
   imageUrl: https://app.joinoneroom.com/img/courses/rocks-coast-stones-tranquil.jpg
